Legger til enkelt script og stilark

--- a/webservice/backend/src/main/resources/public/index.html
+++ b/webservice/backend/src/main/resources/public/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8"/>
+    <title>Vi må finne et tema snart!</title>
+    <link href="index.css" rel="stylesheet" title="Default Style"/>
+    <script src="index.js" type="text/javascript" ></script>
 </head>
 <body>
-    TODO: Skrive litt kode
+<h1>TODO</h1>
 </body>
+<script type="text/javascript">
+    init();
+</script>
 </html>
