--- a/webservice/backend/src/main/resources/public/index.html
+++ b/webservice/backend/src/main/resources/public/index.html
@@ -2,14 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <title>Vi må finne et tema snart!</title>
+    <title>Ølkatalog</title>
     <link href="index.css" rel="stylesheet" title="Default Style"/>
     <script src="index.js" type="text/javascript" ></script>
 </head>
 <body>
-<h1>TODO</h1>
+<h1>Ølliste</h1>
+<table id="main_table">
+
+</table>
+<div id="error_console"></div>
 </body>
 <script type="text/javascript">
-    init();
+    init('#main_table', '#error_console');
 </script>
 </html>
