--- a/webservice/backend/src/main/resources/public/index.html
+++ b/webservice/backend/src/main/resources/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Ølkatalog</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     <link href="index.css" rel="stylesheet" title="Default Style"/>
     <script src="index.js" type="text/javascript" ></script>
 </head>
