--- a/webservice/backend/src/main/resources/public/index.html
+++ b/webservice/backend/src/main/resources/public/index.html
@@ -3,15 +3,25 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Ølkatalog</title>
-    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
-    <link href="index.css" rel="stylesheet" title="Default Style"/>
-    <script src="index.js" type="text/javascript" ></script>
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link href="index.css" rel="stylesheet" title="Default Style">
+    <script src="index.js" type="text/javascript"></script>
 </head>
-<body>
-<h1>Ølliste</h1>
-<table id="main_table">
+<body class="bubblyBackground">
+<h1 class="mainHeader">Ølliste</h1>
+<table id="main_table" class="beerTable">
 
 </table>
+<div class="tableFilters">
+    <form>
+        <label>
+            Indie only:
+            <input type="checkbox" id="filter_indie">
+        </label>
+    </form>
+</div>
+
+
 <div id="error_console"></div>
 </body>
 <script type="text/javascript">
