--- a/webservice/backend/src/main/resources/public/index.html
+++ b/webservice/backend/src/main/resources/public/index.html
@@ -14,10 +14,17 @@
 </table>
 <div class="tableFilters">
     <form>
-        <label>
-            Indie only:
-            <input type="checkbox" id="filter_indie">
-        </label>
+        <fieldset>
+            <legend>Filter table:</legend>
+            <label>
+                Min abv (%):
+                <input type="number" id="filter_abv_min" min="0" max="100">
+            </label>
+            <label>
+                Max abv (%):
+                <input type="number" id="filter_abv_max" min="0" max="100">
+            </label>
+        </fieldset>
     </form>
 </div>
 
