--- a/webservice/backend/src/main/resources/public/index.html
+++ b/webservice/backend/src/main/resources/public/index.html
@@ -27,6 +27,10 @@
                 <input type="number" placeholder="Max number of rows" step="25" min="1" max="300" id="filter_limit"
                        value="10">
             </label>
+            <label>
+                Country:
+                <select id="filter_country" multiple="multiple"></select>
+            </label>
         </fieldset>
     </form>
 </div>
