--- a/webservice/backend/src/main/resources/public/index.html
+++ b/webservice/backend/src/main/resources/public/index.html
@@ -11,9 +11,9 @@
 <h1 class="mainHeader">Ølliste</h1>
 
 <div class="tableFilters">
-    <form>
+    <form id="filter_form">
         <fieldset>
-            <legend>Filter:</legend>
+            <legend>Filter: (<a href="#" id="filter_reset">Reset</a>)</legend>
             <label>
                 Min abv (%):
                 <input type="number" placeholder="0%" id="filter_abv_min" min="0" max="100">
