--- a/webservice/backend/src/main/resources/public/index.html
+++ b/webservice/backend/src/main/resources/public/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <title>Ølkatalog</title>
+    <title>Beer catalogue</title>
     <link rel="shortcut icon" type="image/png" href="favicon.png">
-    <link href="index.css" rel="stylesheet" title="Default Style">
+    <link href="index.css" rel="stylesheet">
     <script src="index.js" type="text/javascript"></script>
 </head>
 <body class="bubblyBackground">
-<h1 class="mainHeader">Ølliste</h1>
+<h1 class="mainHeader">Beers of the world</h1>
 
 <div class="tableFilters">
     <form id="filter_form">
         <fieldset>
-            <legend>Filter: (<a href="#" id="filter_reset">Reset</a>)</legend>
+            <legend>Filter: (<span role="button" id="filter_reset">Reset</span>)</legend>
             <label>
                 Min abv (%):
                 <input type="number" placeholder="0%" id="filter_abv_min" min="0" max="100">
