--- a/webservice/backend/src/main/resources/public/details.html
+++ b/webservice/backend/src/main/resources/public/details.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8"/>
     <link rel="shortcut icon" type="image/png" href="favicon.png">
-    <link href="index.css" rel="stylesheet">
+    <link href="details.css" rel="stylesheet">
     <title>
         Details
     </title>
 </head>
 <body>
+<h1 class="mainHeader">Loading...</h1>
     <p>Not implemented</p>
     <a href="/" title="To beer list">Back</a>
 </body>
