--- a/webservice/backend/src/main/resources/public/details.html
+++ b/webservice/backend/src/main/resources/public/details.html
@@ -8,9 +8,16 @@
         Details
     </title>
 </head>
-<body>
+<body class="bubblyBackground">
 <h1 class="mainHeader">Loading...</h1>
     <p>Not implemented</p>
     <a href="/" title="To beer list">Back</a>
+
+<div id="error_console"></div>
+<script type="module">
+    import init from './details.js';
+
+    init('#error_console');
+</script>
 </body>
 </html>
