Filters in flex-box

--- a/webservice/backend/src/main/resources/public/details.html
+++ b/webservice/backend/src/main/resources/public/details.html
@@ -9,9 +9,9 @@
     </title>
 </head>
 <body class="bubblyBackground">
-<h1 class="mainHeader" id="title_beerName">Loading...</h1>
 
 <section class="mainContent">
+    <h1 class="mainHeader" id="title_beerName">Loading...</h1>
     <div id="beer_brewery">
         <span class="beer_label">Brewery: </span>
         <span class="beer_info"></span>
@@ -41,7 +41,7 @@
         <span class="beer_info"></span>
     </div>
 </section>
-<nav>
+<nav class="navigation_links">
     <a href="/" title="To beer list">&#x261c; Back</a>
 </nav>
 
