Formatting details page

--- a/webservice/backend/src/main/resources/public/details.html
+++ b/webservice/backend/src/main/resources/public/details.html
@@ -12,36 +12,38 @@
 
 <section class="mainContent">
     <h1 class="mainHeader" id="title_beerName">Loading...</h1>
-    <div id="beer_brewery">
-        <span class="beer_label">Brewery: </span>
-        <span class="beer_info"></span>
-    </div>
-    <div id="beer_country">
-        <span class="beer_label">Country: </span>
-        <span class="beer_info"></span>
-    </div>
-    <div id="beer_ibu">
-        <span class="beer_label">IBU: </span>
-        <span class="beer_info"></span>
-    </div>
-    <div id="beer_abv">
-        <span class="beer_label">ABV: </span>
-        <span class="beer_info"></span>
-    </div>
-    <div id="beer_kcal">
-        <span class="beer_label">Calories: </span>
-        <span class="beer_info"></span>
-    </div>
-    <div id="beer_webPage">
-        <span class="beer_label">Web page: </span>
-        <span class="beer_info"></span>
-    </div>
-    <div id="beer_lastUpdate">
-        <span class="beer_label">Last updated: </span>
-        <span class="beer_info"></span>
+    <div class="beer_info_group">
+        <div id="beer_brewery" class="beer_info_wrapper">
+            <span class="beer_label">Brewery: </span>
+            <span class="beer_info"></span>
+        </div>
+        <div id="beer_country" class="beer_info_wrapper">
+            <span class="beer_label">Country: </span>
+            <span class="beer_info"></span>
+        </div>
+        <div id="beer_ibu" class="beer_info_wrapper">
+            <span class="beer_label">IBU: </span>
+            <span class="beer_info"></span>
+        </div>
+        <div id="beer_abv" class="beer_info_wrapper">
+            <span class="beer_label">ABV: </span>
+            <span class="beer_info"></span>
+        </div>
+        <div id="beer_kcal" class="beer_info_wrapper">
+            <span class="beer_label">Calories: </span>
+            <span class="beer_info"></span>
+        </div>
+        <div id="beer_webPage" class="beer_info_wrapper">
+            <span class="beer_label">Web page: </span>
+            <span class="beer_info"></span>
+        </div>
+        <div id="beer_lastUpdate" class="beer_info_wrapper">
+            <span class="beer_label">Last updated: </span>
+            <span class="beer_info"></span>
+        </div>
     </div>
 </section>
-<nav class="navigation_links">
+<nav class="navigation_links" id="footer">
     <a href="/" title="To beer list">&#x261c; Back</a>
 </nav>
 
