--- a/webservice/backend/src/main/resources/public/index.html
+++ b/webservice/backend/src/main/resources/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Beer catalogue</title>
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <link href="index.css" rel="stylesheet">
 </head>
 <body class="bubblyBackground">
