Fetching text from Wikipedia

--- a/webservice/backend/src/main/resources/public/details.html
+++ b/webservice/backend/src/main/resources/public/details.html
@@ -46,13 +46,14 @@
             <span class="beer_info"></span>
         </div>
     </div>
+    <div id="wikipedia_content"></div>
 </section>
 <nav class="navigation_links" id="footer">
     <a href="/" title="To beer list">&#x261C; Back</a>
     <a href="/edit.html" hidden="hidden" id="link_edit">&#x270E; Edit beer</a>
 </nav>
 
-<div id="error_console"></div>
+<div id=" error_console"></div>
 <script type="module">
     import init from './details.js';
 
