--- a/webservice/frontend/static/index.html
+++ b/webservice/frontend/static/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8"/>
     <title>Beer catalogue</title>
     <link rel="shortcut icon" type="image/png" href="./favicon.png">
+    <script src="./main.bundle.js" defer></script>
 </head>
 <body>
-    <script src="./main.bundle.js"></script>
+    <div id="app"></div>
 </body>
 </html>
