--- a/webservice/frontend/static/index.html
+++ b/webservice/frontend/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Beer catalogue</title>
     <link rel="shortcut icon" type="image/png" href="./favicon.png">
-    <script src="./main.bundle.js" defer></script>
+    <script src="/main.bundle.js" defer></script>
 </head>
 <body>
     <div id="app"></div>
