--- a/webservice/backend/src/main/resources/public/details.html
+++ b/webservice/backend/src/main/resources/public/details.html
@@ -51,6 +51,7 @@
 <nav class="navigation_links" id="footer">
     <a href="/" title="To beer list">&#x261C; Back</a>
     <a href="/edit.html" hidden="hidden" id="link_edit">&#x270E; Edit beer</a>
+    <a href="/suggestions.html" title="To suggestions">Suggestions</a>
 </nav>
 
 <div id=" error_console"></div>
