--- a/webservice/backend/src/main/resources/public/edit.html
+++ b/webservice/backend/src/main/resources/public/edit.html
@@ -58,6 +58,7 @@
 </section>
 <nav class="navigation_links" id="footer">
     <a href="/" title="To beer list">&#x261C; Back</a>
+    <a href="/suggestions.html" title="To suggestions">Suggestions</a>
 </nav>
 
 <div id="error_console"></div>
