--- a/webservice/backend/src/main/resources/public/index.html
+++ b/webservice/backend/src/main/resources/public/index.html
@@ -43,6 +43,9 @@
         </table>
     </div>
 </section>
+<nav class="navigation_links" id="footer">
+    <a href="/suggestions.html" title="To suggestions">Suggestions</a>
+</nav>
 
 <div id="error_console"></div>
 </body>
