--- a/webservice/backend/src/main/resources/public/index.html
+++ b/webservice/backend/src/main/resources/public/index.html
@@ -6,14 +6,14 @@
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <link href="index.css" rel="stylesheet">
 </head>
-<body class="bubblyBackground">
+<body class="earth_background">
 
 <section class="mainContent">
     <h1 class="mainHeader">Beers of the world</h1>
     <div class="tableFilters">
         <form id="filter_form">
             <fieldset class="filter_fieldset">
-                <legend>Filter: (<span role="button" id="filter_reset">Reset</span>)</legend>
+                <legend>Filter: (<span role="button" id="filter_reset" tabindex="1" class="reset_button">Reset</span>)</legend>
                 <div class="labelGroup">
                     <label class="filter_label">
                         Min abv (%):
@@ -31,17 +31,15 @@
                     </label>
                 </div>
                 <label id="filter_country_label" class="filter_label">
-                    Country:
+                    Filter by countries:
                     <select id="filter_country" multiple="multiple"></select>
                 </label>
             </fieldset>
         </form>
     </div>
-    <div class="beerTable_wrapper">
-        <table id="main_table" class="beerTable">
+    <table id="main_table" class="beerTable">
 
-        </table>
-    </div>
+    </table>
 </section>
 <nav class="navigation_links" id="footer">
     <a href="/suggestions.html" title="To suggestions">Suggestions</a>
