Support for messages

--- a/webservice/backend/src/main/resources/public/details.html
+++ b/webservice/backend/src/main/resources/public/details.html
@@ -46,6 +46,8 @@
             <span class="beer_info"></span>
         </div>
     </div>
+    <div id="messages" class="message_list">
+    </div>
     <div id="wikipedia_content"></div>
 </section>
 <nav class="navigation_links" id="footer">
