Updated fonts with all glyphs

--- a/webservice/backend/src/main/resources/public/details.html
+++ b/webservice/backend/src/main/resources/public/details.html
@@ -8,7 +8,7 @@
         Details
     </title>
 </head>
-<body class="bubblyBackground">
+<body class="earth_background">
 
 <section class="mainContent">
     <h1 class="mainHeader">
