--- a/webservice/backend/src/main/resources/public/edit.html
+++ b/webservice/backend/src/main/resources/public/edit.html
@@ -9,7 +9,7 @@
         Details
     </title>
 </head>
-<body class="bubblyBackground">
+<body class="earth_background">
 
 <section class="mainContent">
     <h1 class="mainHeader" id="title_beerName">Loading...</h1>
