--- a/webservice/backend/src/main/resources/public/suggestions.html
+++ b/webservice/backend/src/main/resources/public/suggestions.html
@@ -8,7 +8,7 @@
         Suggestions
     </title>
 </head>
-<body class="bubblyBackground">
+<body class="earth_background">
 
 <section class="mainContent">
     <h1 class="mainHeader">Suggestions</h1>
