--- a/webservice/backend/src/main/resources/public/details.html
+++ b/webservice/backend/src/main/resources/public/details.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
-    <link href="details.css" rel="stylesheet">
+    <link href="styles/details.css" rel="stylesheet">
     <title>
         Details
     </title>
@@ -58,7 +58,7 @@
 
 <div id=" error_console"></div>
 <script type="module">
-    import init from './details.js';
+    import init from './scripts/details.js';
 
     init('#error_console');
 </script>
