--- a/webservice/backend/src/main/resources/public/edit.html
+++ b/webservice/backend/src/main/resources/public/edit.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8"/>
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
-    <link href="details.css" rel="stylesheet">
-    <link href="edit.css" rel="stylesheet">
+    <link href="styles/details.css" rel="stylesheet">
+    <link href="styles/edit.css" rel="stylesheet">
     <title>
         Details
     </title>
@@ -63,7 +63,7 @@
 
 <div id="error_console"></div>
 <script type="module">
-    import init from './edit.js';
+    import init from './scripts/edit.js';
 
     init('#error_console');
 </script>
