--- a/webservice/backend/src/main/resources/public/index.html
+++ b/webservice/backend/src/main/resources/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Beer catalogue</title>
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
-    <link href="index.css" rel="stylesheet">
+    <link href="styles/index.css" rel="stylesheet">
 </head>
 <body class="earth_background">
 
@@ -48,7 +48,7 @@
 <div id="error_console"></div>
 </body>
 <script type="module">
-    import init from './index.js';
+    import init from './scripts/index.js';
     init('#main_table', '#error_console');
 </script>
 </html>
