--- a/webservice/backend/src/main/resources/public/suggestions.html
+++ b/webservice/backend/src/main/resources/public/suggestions.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
-    <link href="suggestions.css" rel="stylesheet">
+    <link href="styles/suggestions.css" rel="stylesheet">
     <title>
         Suggestions
     </title>
@@ -56,7 +56,7 @@
 
 <div id="error_console"></div>
 <script type="module">
-    import init from './suggestions.js';
+    import init from './scripts/suggestions.js';
 
     init('#main_table', '#filter_form', '#error_console');
 </script>
