--- a/webservice/backend/src/main/resources/public/details.html
+++ b/webservice/backend/src/main/resources/public/details.html
@@ -16,36 +16,15 @@
         <img src="#" alt="country flag" name="country flag" class="country_flag" id="country_flag" hidden="hidden">
     </h1>
     <img src="#" alt="" name="beer image" id="beer_image" class="beer_image_main" hidden="hidden">
-    <div class="beer_info_group">
-        <div id="beer_brewery" class="beer_info_wrapper">
-            <span class="beer_label">Brewery: </span>
-            <span class="beer_info"></span>
-        </div>
-        <div id="beer_country" class="beer_info_wrapper">
-            <span class="beer_label">Country: </span>
-            <span class="beer_info"></span>
-        </div>
-        <div id="beer_ibu" class="beer_info_wrapper">
-            <span class="beer_label">IBU: </span>
-            <span class="beer_info"></span>
-        </div>
-        <div id="beer_abv" class="beer_info_wrapper">
-            <span class="beer_label">ABV: </span>
-            <span class="beer_info percentage"></span>
-        </div>
-        <div id="beer_kcal" class="beer_info_wrapper">
-            <span class="beer_label">Calories: </span>
-            <span class="beer_info"></span>
-        </div>
-        <div id="beer_webPage" class="beer_info_wrapper">
-            <span class="beer_label">Web page: </span>
-            <span class="beer_info"></span>
-        </div>
-        <div id="beer_lastUpdate" class="beer_info_wrapper">
-            <span class="beer_label">Last updated: </span>
-            <span class="beer_info"></span>
-        </div>
-    </div>
+    <dl class="beer_info_group">
+        <dt id="beer_brewery">Brewery</dt>
+        <dt id="beer_country">Country</dt>
+        <dt id="beer_ibu">IBU</dt>
+        <dt id="beer_abv">ABV</dt>
+        <dt id="beer_kcal">Calories</dt>
+        <dt id="beer_webPage">Web page</dt>
+        <dt id="beer_lastUpdate">Last updated</dt>
+    </dl>
     <div id="messages" class="message_list">
     </div>
     <div id="wikipedia_content"></div>
