--- a/webservice/backend/src/main/resources/public/details.html
+++ b/webservice/backend/src/main/resources/public/details.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8"/>
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
@@ -8,9 +9,11 @@
         Details
     </title>
 </head>
+
 <body class="earth_background">
 
 <section class="mainContent">
+    <!-- These elements are refered in the javascript ny id or class, and populated with data -->
     <h1 class="mainHeader">
         <span id="title_beerName">Loading...</span>
         <img src="#" alt="country flag" name="country flag" class="country_flag" id="country_flag" hidden="hidden">
@@ -29,6 +32,7 @@
     </div>
     <div id="wikipedia_content"></div>
 </section>
+
 <nav class="navigation_links" id="footer">
     <a href="/" title="To beer list">&#x261C; Back</a>
     <a href="/edit.html" hidden="hidden" id="link_edit">&#x270E; Edit beer</a>
@@ -36,9 +40,12 @@
 </nav>
 
 <div id=" error_console"></div>
+
 <script type="module">
     import init from './scripts/details.js';
     init('#error_console');
 </script>
+
 </body>
+
 </html>
